--- a/projects/notedown-pest/Cargo.toml
+++ b/projects/notedown-pest/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
-name = "notedown_parser"
-# publish = false
-version = "0.6.0"
+name = "notedown-pest"
+version = "1.0.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Text parser"
 repository = "https://github.com/nyar-lang/notedown-rs"
@@ -11,5 +10,8 @@ edition = "2018"
 
 
 [dependencies]
-notedown_ast = {version = "0.8", path = "../notedown-ast"}
-notedown-pest = {version = "1.0", path = "../notedown-pest"}
+pest = "2.1"
+
+[dev-dependencies]
+pest_generator = "2.1"
+quote = "1.0"
