🔮 Support content aware

--- a/projects/notedown-ast/package.json
+++ b/projects/notedown-ast/package.json
@@ -1,6 +1,6 @@
 {
     "private": true,
     "scripts": {
-        "up": "cargo publish --allow-dirty"
+        "pub": "cargo publish --allow-dirty"
     }
 }
