--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "notedown_ast"
-version = "0.8.1"
+version = "0.8.2"
 authors = ["Aster <192607617@qq.com>"]
 description = "notedown ast and converter"
 repository = "https://github.com/nyar-lang/Notedown-rs"
@@ -10,6 +10,8 @@ edition = "2018"
 
 [dependencies]
 text-utils = "0.3"
+# lsp-types = { version = "0.86", features = ["proposed"] }
+
 
 [dev-dependencies]
 
