--- a/projects/notedown-parser/Cargo.toml
+++ b/projects/notedown-parser/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "notedown_parser"
-version = "0.7.0"
+version = "0.7.4"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Text parser"
 repository = "https://github.com/nyar-lang/notedown-rs"
@@ -12,3 +12,4 @@ edition = "2018"
 [dependencies]
 notedown_ast = {version = "0.8", path = "../notedown-ast"}
 notedown-pest = {version = "1.0", path = "../notedown-pest"}
+url = "2.2"
