🔧 Fix trait broken

--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "notedown_ast"
-version = "0.8.3"
+version = "0.9.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "notedown ast and converter"
 repository = "https://github.com/nyar-lang/Notedown-rs"
@@ -17,5 +17,5 @@ yew-katex = { version =  "0.2", optional = true }
 [dev-dependencies]
 
 [features]
-default = ["render"]
+default = []
 render = ["yew", "yew-katex"]
