🚀 Update rust fmt version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,10 @@
 members = ["projects/*"]
 default-members = [
     "projects/notedown-ast",
+    "projects/notedown-pest",
     "projects/notedown-parser",
     "projects/notedown-parser2",
+    "projects/notedown-yew-preview",
 ]
 
 [profile.release]
