--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "fmt": "cargo fmt --all",
         "push": "yarn test && git push",
         "reset": "git reset Head~ --soft",
-        "pub": "cargo-publish-all --yes --allow-dirty --no-verify1",
+        "pub": "cargo-publish-all --yes --allow-dirty --no-verify1 --verbose",
         "vsc": "cd projects/notedown-vscode && wasm-pack build --target nodejs && wasm-pack publish"
     }
 }
