--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "notedown_ast"
-version = "0.11.0"
+version = "0.11.1"
 authors = ["Aster <192607617@qq.com>"]
 description = "notedown ast and converter"
 repository = "https://github.com/nyar-lang/Notedown-rs"
@@ -10,12 +10,14 @@ edition = "2018"
 
 [dependencies]
 text-utils = "0.3"
-# lsp-types = { version = "0.86", features = ["proposed"] }
 yew = { version =  "0.17", optional = true }
 yew-katex = { version =  "0.2", optional = true }
+lsp-types = { version = "0.86", optional = true, features = ["proposed"] }
+notedown-pest = { version = "1.0", optional = true}
 
 [dev-dependencies]
 
 [features]
-default = []
+default = ["lsp"]
 web = ["yew", "yew-katex"]
+lsp = ["lsp-types", "notedown-pest"]
