--- a/projects/notedown-parser/Cargo.toml
+++ b/projects/notedown-parser/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "notedown_parser"
-version = "0.10.0"
+version = "0.12.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Text parser"
-repository = "https://github.com/nyar-lang/notedown-rs"
-readme = "Readme.md"
+repository = "https://github.com/notedge/notedown-rs"
+readme = "../../readme.md"
 license = "MPL-2.0"
 edition = "2018"
 
 
 [dependencies]
-notedown_ast = {version = "0.11", path = "../notedown-ast"}
+notedown_ast = {version = "0.12", path = "../notedown-ast"}
 notedown-pest = {version = "1.0", path = "../notedown-pest"}
 url = "2.2"
