--- a/projects/notedown-parser2/Cargo.toml
+++ b/projects/notedown-parser2/Cargo.toml
@@ -4,7 +4,7 @@ publish = false
 version = "0.1.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Text parser"
-repository = "https://github.com/nyar-lang/notedown-rs"
+repository = "https://github.com/notedge/notedown-rs"
 readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2018"
