--- a/projects/notedown-pest/Cargo.toml
+++ b/projects/notedown-pest/Cargo.toml
@@ -3,7 +3,7 @@ name = "notedown-pest"
 version = "1.0.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Notedown Text parser"
-repository = "https://github.com/nyar-lang/notedown-rs"
+repository = "https://github.com/notedge/notedown-rs"
 readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2018"
