--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = ["projects/*"]
 default-members = [
     "projects/notedown-ast",
+    "projects/notedown-plugin",
     "projects/notedown-pest",
     "projects/notedown-parser",
     "projects/notedown-parser2",
