--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2021"
 [dependencies]
 text-utils = "0.3.0"
 lsp-types = { version = "0.91.1", optional = true, features = ["proposed"] }
+num = "0.4"
 
 [dev-dependencies]
 
