--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -12,6 +12,8 @@ edition = "2021"
 text-utils = "0.3.0"
 lsp-types = { version = "0.91.1", optional = true, features = ["proposed"] }
 num = "0.4"
+itertools = "0.10.1"
+indexmap = "1.7"
 
 [dev-dependencies]
 
