🎀 Support highlight multiple lines in code block

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ default-members = [
     "projects/notedown-pest",
     "projects/notedown-parser2",
 ]
+exclude = [
+    "projects/notedown-parser",
+]
 
 [profile.release]
 lto = true
