--- a/projects/notedown-ast/Cargo.toml
+++ b/projects/notedown-ast/Cargo.toml
@@ -10,15 +10,14 @@ edition = "2021"
 
 [dependencies]
 text-utils = "0.3.0"
-lsp-types = { version = "0.91.1", optional = true, features = ["proposed"] }
-num = "0.4"
-itertools = "0.10.1"
-indexmap = "1.7"
+yggdrasil-shared = "0.1.0"
+num = "0.4.0"
+itertools = "0.10.3"
+indexmap = "1.7.0"
 thiserror = "1.0.30"
 
 [dev-dependencies]
 
 [features]
-default = ["lsp"]
+default = []
 web = []
-lsp = ["lsp-types"]
