🌿 Support url encoding and decoding

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "text-utils"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Create a record to store any type of value"
-repository = "https://github.com/GalAster/dict-rs"
-keywords = ["any", "map", "dict", "record"]
+repository = "https://github.com/GalAster/text-utils-rs"
+keywords = ["text", "utils"]
 readme = "README.md"
 license = "MPL-2.0"
 edition = "2018"
