--- a/projects/notedown-image/Cargo.toml
+++ b/projects/notedown-image/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 [dependencies]
 image = "0.23.14"
 dashmap = "4.0.2"
-url = "*"
+url = "2.2.2"
 
 [dev-dependencies]
 notedown_ast = { version = "0.13", path = "../notedown-ast" }
