--- a/projects/notedown-parser/Cargo.toml
+++ b/projects/notedown-parser/Cargo.toml
@@ -13,3 +13,5 @@ publish = false
 notedown_ast = {version = "0.13", path = "../notedown-ast"}
 notedown-pest = {version = "1.0", path = "../notedown-pest"}
 url = "2.2.2"
+
+[dev-dependencies]
