--- a/projects/notedown-parser/tests/simple/style.yaml
+++ b/projects/notedown-parser/tests/simple/style.yaml
@@ -6,11 +6,9 @@ ASTNode {
                     [
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    ",
-                                ),
+                                "    ",
                             ),
-                            range: "1-5",
+                            range: 1..5,
                         },
                         ASTNode {
                             kind: StyledSpan(
@@ -19,31 +17,27 @@ ASTNode {
                                     children: [
                                         ASTNode {
                                             kind: TextSpan(
-                                                Normal(
-                                                    "斜体 Italic",
-                                                ),
+                                                "斜体 Italic",
                                             ),
-                                            range: "6-19",
+                                            range: 6..19,
                                         },
                                     ],
                                 },
                             ),
-                            range: "5-20",
+                            range: 5..20,
                         },
                     ],
                 ),
-                range: "1-20",
+                range: 1..20,
             },
             ASTNode {
                 kind: Paragraph(
                     [
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    ",
-                                ),
+                                "    ",
                             ),
-                            range: "22-26",
+                            range: 22..26,
                         },
                         ASTNode {
                             kind: StyledSpan(
@@ -52,31 +46,27 @@ ASTNode {
                                     children: [
                                         ASTNode {
                                             kind: TextSpan(
-                                                Normal(
-                                                    "粗体 Bold",
-                                                ),
+                                                "粗体 Bold",
                                             ),
-                                            range: "28-39",
+                                            range: 28..39,
                                         },
                                     ],
                                 },
                             ),
-                            range: "26-41",
+                            range: 26..41,
                         },
                     ],
                 ),
-                range: "22-41",
+                range: 22..41,
             },
             ASTNode {
                 kind: Paragraph(
                     [
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    ",
-                                ),
+                                "    ",
                             ),
-                            range: "43-47",
+                            range: 43..47,
                         },
                         ASTNode {
                             kind: StyledSpan(
@@ -85,31 +75,27 @@ ASTNode {
                                     children: [
                                         ASTNode {
                                             kind: TextSpan(
-                                                Normal(
-                                                    "斜粗体 Bold-Italic",
-                                                ),
+                                                "斜粗体 Bold-Italic",
                                             ),
-                                            range: "50-71",
+                                            range: 50..71,
                                         },
                                     ],
                                 },
                             ),
-                            range: "47-74",
+                            range: 47..74,
                         },
                     ],
                 ),
-                range: "43-74",
+                range: 43..74,
             },
             ASTNode {
                 kind: Paragraph(
                     [
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    ",
-                                ),
+                                "    ",
                             ),
-                            range: "76-80",
+                            range: 76..80,
                         },
                         ASTNode {
                             kind: StyledSpan(
@@ -118,31 +104,27 @@ ASTNode {
                                     children: [
                                         ASTNode {
                                             kind: TextSpan(
-                                                Normal(
-                                                    "下划线 Underline",
-                                                ),
+                                                "下划线 Underline",
                                             ),
-                                            range: "81-100",
+                                            range: 81..100,
                                         },
                                     ],
                                 },
                             ),
-                            range: "80-101",
+                            range: 80..101,
                         },
                     ],
                 ),
-                range: "76-101",
+                range: 76..101,
             },
             ASTNode {
                 kind: Paragraph(
                     [
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    ",
-                                ),
+                                "    ",
                             ),
-                            range: "103-107",
+                            range: 103..107,
                         },
                         ASTNode {
                             kind: StyledSpan(
@@ -151,31 +133,27 @@ ASTNode {
                                     children: [
                                         ASTNode {
                                             kind: TextSpan(
-                                                Normal(
-                                                    "删除线 Strikethrough",
-                                                ),
+                                                "删除线 Strikethrough",
                                             ),
-                                            range: "109-132",
+                                            range: 109..132,
                                         },
                                     ],
                                 },
                             ),
-                            range: "107-134",
+                            range: 107..134,
                         },
                     ],
                 ),
-                range: "103-134",
+                range: 103..134,
             },
             ASTNode {
                 kind: Paragraph(
                     [
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    ",
-                                ),
+                                "    ",
                             ),
-                            range: "136-140",
+                            range: 136..140,
                         },
                         ASTNode {
                             kind: StyledSpan(
@@ -184,82 +162,68 @@ ASTNode {
                                     children: [
                                         ASTNode {
                                             kind: TextSpan(
-                                                Normal(
-                                                    "数据删除 Undercover",
-                                                ),
+                                                "数据删除 Undercover",
                                             ),
-                                            range: "143-166",
+                                            range: 143..166,
                                         },
                                     ],
                                 },
                             ),
-                            range: "140-169",
+                            range: 140..169,
                         },
                     ],
                 ),
-                range: "136-169",
+                range: 136..169,
             },
             ASTNode {
                 kind: Paragraph(
                     [
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    ",
-                                ),
+                                "    ",
                             ),
-                            range: "171-175",
+                            range: 171..175,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "代码 code",
-                                ),
+                                "代码 code",
                             ),
-                            range: "175-188",
+                            range: 175..188,
                         },
                     ],
                 ),
-                range: "171-188",
+                range: 171..188,
             },
             ASTNode {
                 kind: Paragraph(
                     [
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    ",
-                                ),
+                                "    ",
                             ),
-                            range: "190-194",
+                            range: 190..194,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "code`escape",
-                                ),
+                                "code`escape",
                             ),
-                            range: "194-209",
+                            range: 194..209,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
+                                "\n",
                             ),
-                            range: "209-210",
+                            range: 209..210,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    ",
-                                ),
+                                "    ",
                             ),
-                            range: "210-214",
+                            range: 210..214,
                         },
                     ],
                 ),
-                range: "190-214",
+                range: 190..214,
             },
         ],
     ),
