--- a/projects/notedown-parser/tests/simple/text.yaml
+++ b/projects/notedown-parser/tests/simple/text.yaml
@@ -6,111 +6,85 @@ ASTNode {
                     [
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor",
-                                ),
+                                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor",
                             ),
-                            range: "1-83",
+                            range: 0..78,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
+                                "\n",
                             ),
-                            range: "83-84",
+                            range: 78..79,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis",
-                                ),
+                                "incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis",
                             ),
-                            range: "84-162",
+                            range: 79..153,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
+                                "\n",
                             ),
-                            range: "162-163",
+                            range: 153..154,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
-                                ),
+                                "nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
                             ),
-                            range: "163-244",
+                            range: 154..231,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
+                                "\n",
                             ),
-                            range: "244-245",
+                            range: 231..232,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore",
-                                ),
+                                "Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore",
                             ),
-                            range: "245-325",
+                            range: 232..308,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
+                                "\n",
                             ),
-                            range: "325-326",
+                            range: 308..309,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt",
-                                ),
+                                "eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt",
                             ),
-                            range: "326-408",
+                            range: 309..387,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
+                                "\n",
                             ),
-                            range: "408-409",
+                            range: 387..388,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    in culpa qui officia deserunt mollit anim id est laborum.",
-                                ),
+                                "in culpa qui officia deserunt mollit anim id est laborum.",
                             ),
-                            range: "409-470",
+                            range: 388..445,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "\n",
-                                ),
+                                "\n",
                             ),
-                            range: "470-471",
+                            range: 445..446,
                         },
                         ASTNode {
                             kind: TextSpan(
-                                Normal(
-                                    "    ",
-                                ),
+                                "    ",
                             ),
-                            range: "471-475",
+                            range: 446..450,
                         },
                     ],
                 ),
-                range: "1-475",
+                range: 0..450,
             },
         ],
     ),
